--- a/firefly-frontend/src/style/colors.scss
+++ b/firefly-frontend/src/style/colors.scss
@@ -18,3 +18,4 @@ $dark: #051E37;
 $--theme-primary: --theme-primary;
 $--theme-background: --theme-background;
 $--theme-foreground: --theme-foreground;
+$--theme-text: --theme-text;
