--- a/firefly-frontend/src/style/themes.scss
+++ b/firefly-frontend/src/style/themes.scss
@@ -50,6 +50,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 }
 
 .el-table {
+  background-color: var($--theme-background);
   border-color: var($--theme-foreground);
   color: var($--theme-text);
   thead {
