--- a/firefly-frontend/src/style/themes.scss
+++ b/firefly-frontend/src/style/themes.scss
@@ -97,4 +97,18 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
   color: var($--theme-text);
 }
 
+.el-input-group__append, .el-input-group__prepend {
+  background-color: var($--theme-background);
+  border-color: var($--theme-foreground);
+  color: var($--theme-text);
+  button:active {
+    color: var($--theme-primary);
+  }
+}
+
+.el-switch__core {
+  background-color: var($--theme-background);
+  border-color: var($--theme-background);
+}
+
 // Import this once in main.js to apply theme root styles and Element UI theming!
